Fix body margin

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+body {
+  margin: 0;
+}
+
 .content {
   display: flex;
   flex-flow: column wrap;
@@ -237,7 +241,7 @@ button {
 }
 
 .featuredSpeakers button {
-  width: 100%;
+  width: 95%;
   height: 50px;
   border: 1.5px solid rgb(168, 166, 166);
   border-radius: 3px;
@@ -246,7 +250,7 @@ button {
   font-family: 'Lato', sans-serif;
   font-weight: 900;
   font-size: 21px;
-  margin-bottom: 10%;
+  margin: 0 2.5% 10% 2.5%;
 }
 
 .featuredSpeakers button:hover {
