--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ button {
   flex-flow: row-reverse;
   justify-content: flex-end;
   align-items: center;
+  padding-bottom: 15%;
 }
 
 .header .logo {
@@ -50,7 +51,7 @@ button {
   background-size: 100% 100%;
   display: flex;
   flex-flow: column;
-  padding: 20% 5% 10% 5%;
+  padding: 0% 5% 10% 5%;
 }
 
 .mainPage h3 {
