--- a/about_styles.css
+++ b/about_styles.css
@@ -7,9 +7,8 @@ body {
 
 .content {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
   width: 100%;
-  background-color: #ededed;
 }
 
 button {
@@ -22,12 +21,20 @@ button {
   display: none;
 }
 
+.divline {
+  width: 53px;
+  height: 16px;
+  border-bottom: 1px solid #ec5242;
+  margin: 0 auto 54px;
+}
+
 .header {
   width: 100%;
   display: flex;
   flex-flow: row-reverse;
   justify-content: flex-end;
   align-items: center;
+  padding-bottom: 6%;
 }
 
 .header .logo {
@@ -42,4 +49,158 @@ button {
   height: 35%;
   width: 35%;
   padding: 15px;
+}
+
+.aboutMain {
+  background-image: url(art/bg_mobile_about.png);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding: 0% 5% 10% 5%;
+  background-color: rgb(245, 244, 244);
+  text-align: center;
+}
+
+.aboutMain h3 {
+  font-family: 'Lato', sans-serif;
+  color: #ec5242;
+  font-size: 23px;
+  margin-bottom: 0;
+  font-weight: 400;
+  padding-left: 3%;
+}
+
+.aboutMain h1 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  color: #de4939;
+  margin-top: 10px;
+  padding-left: 3%;
+}
+
+.message {
+  font-family: 'Lato', sans-serif;
+  color: #272a31;
+  padding: 1em 0.5em;
+  line-height: 150%;
+  font-size: 14px;
+  height: auto;
+  text-align: justify;
+  border: rgb(207, 206, 206) solid 1.5px;
+  background-color: #fff;
+  text-align: center;
+}
+
+.contact {
+  font-family: 'Lato', sans-serif;
+  color: #272a31;
+}
+
+.contact a {
+  font-family: 'Lato', sans-serif;
+  color: #272a31;
+  font-weight: 600;
+}
+
+.pastEvents {
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  padding-top: 40px;
+}
+
+.pastEvents h2 {
+  font-family: 'Ubuntu', sans-serif;
+  color: #272a31;
+  font-size: 30px;
+  font-weight: 800;
+  margin: 8px;
+}
+
+.pastEvents p {
+  font-family: 'Lato', sans-serif;
+  color: #272a31;
+  padding: 0 5% 15% 5%;
+}
+
+.pastEvents button {
+  font-family: 'Lato', sans-serif;
+  color: #fff;
+  font-size: 25px;
+  font-weight: 500;
+  width: 90%;
+  height: 200px;
+  margin-bottom: 5%;
+  background-image: url(art/button_placeholder.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: hue-rotate(0deg);
+}
+
+.pastEvents button:hover {
+  filter: grayscale(100%);
+}
+
+
+
+
+
+.partner {
+  background-color: #272a31;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.partner h2 {
+  color: #fff;
+  font-family: 'Lato', sans-serif;
+  font-size: 25px;
+  font-weight: 300;
+  margin: 65% auto 0 auto;
+}
+
+.partners {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.partners a {
+  width: 20%;
+  margin: 0 30px 25px 30px;
+}
+
+.partners img {
+  width: 100%;
+  height: auto;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
+}
+
+.footer .logo {
+  width: 70px;
+  height: auto;
+}
+
+.footer p {
+  color: #272a31;
+  font-family: 'Lato', sans-serif;
+  font-size: 13px;
+  font-weight: 300;
+}
+
+.footer img {
+  width: 100%;
+  height: auto;
 }
