Mobile version ready

--- a/about_styles.css
+++ b/about_styles.css
@@ -76,7 +76,7 @@ button {
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   font-size: 40px;
-  color: #de4939;
+  color: #ec5242;
   margin-top: 10px;
   padding-left: 3%;
 }
