--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ button {
   text-align: center;
 }
 
+li {
+  list-style: none;
+}
+
 .hide {
   display: none;
 }
@@ -314,4 +318,92 @@ button {
 .footer img {
   width: 100%;
   height: auto;
+}
+
+@media (min-width: 786px) {
+  .mainPage{
+    background-image: url(art/bg_desktop_main.png);
+    background-size: cover;
+    padding: 0 0 150px 0;
+  }
+
+  .header {
+    background-color: #fff;
+    padding: 0%;
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+  }
+
+  .header .logo {
+    padding: 5px;
+  }
+
+  .hamburguerIcon {
+    display: none;
+  }
+
+  .mobilemenu ul {
+    display: flex;
+  }
+
+  .mobilemenu li {
+    color: #272a31;
+    font-family: 'Lato', sans-serif;
+    font-size: 19px;
+    font-weight: 400;
+    padding: 5px 15px;
+  }
+
+  .mobilemenu a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .mobilemenu a:hover {
+    color: #ec5242;
+  }
+
+  .mainPage-content {
+    padding-left: 7%;
+  }
+
+  .mainPage h3 {
+    margin-top: 10%;
+    font-size: 40px;
+    letter-spacing: 2px;
+  }
+
+  .mainPage h1 {
+    font-size: 68px;
+  }
+
+  .message {
+    width: 50%;
+    background-color: #f5f5f5;
+    margin-left: 44px;
+    font-size: 15px;
+    font-weight: 600;
+  }
+
+  .dateLocation {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    margin-left: 44px;
+    height: auto;
+  }
+
+  .dateLocation h2 {
+    margin: 5px;
+    font-size: 40px;
+  }
+
+  .dateLocation h4 {
+    margin: 5px;
+    font-size: 22px;
+  }
+
+
 }
