--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ li {
   height: 35%;
   width: 35%;
   padding: 15px;
+  cursor: pointer;
 }
 
 .mobilemenu {
@@ -57,7 +58,7 @@ li {
   left: 0;
   bottom: 0;
   pointer-events: all;
-  user-select: all;
+  user-select: inherit;
 }
 
 .closeMenu {
