--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ li {
   height: auto;
 }
 
-.footer p {
+.footer h4 {
   color: #272a31;
   font-family: 'Lato', sans-serif;
   font-size: 13px;
@@ -574,7 +574,7 @@ li {
     height: 150px;
   }
 
-  .footer p {
+  .footer h4 {
     font-size: 20px;
     font-weight: 400;
   }
