--- a/about_styles.css
+++ b/about_styles.css
@@ -243,7 +243,7 @@ li {
 
 .footer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   height: 100px;
 }
