--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ li {
   color: #ec5242;
   margin-top: 10px;
   padding-left: 3%;
-  background-image: url(art/h1_bg.jpg);
+  background-image: url(Art/h1_bg.jpg);
   background-size: contain;
   -webkit-background-clip: text;
   -webkit-text-fill-color: #ff1900a9;
